# baliem

./: Cargo.toml  README.md  memory.x
.cargo/: config
.github/: rust.yml
.github/workflows/: ci.yml  release.yaml  rust.yml
dxf/: bottom.dxf  closed.dxf  open.dxf  switch.dxf  top.dxf
src/: layout.rs  main.rs
src/leds/: driver.rs  mod.rs  off.rs  solid.rs  wheel.rs
